--- a/app/shared/menu.scss
+++ b/app/shared/menu.scss
@@ -24,10 +24,58 @@
     transition: left .2s;
     width: 80vw;
     z-index: 100;
+
+    .user {
+      padding: 1em;
+      display: flex;
+      align-items: center;
+      border-image: linear-gradient(to right, color-get-alpha(black, 0), color-get-alpha(gold, 0.8), color-get-alpha(black, 0)) 100% 1;
+      border-style: solid;
+      border-width: 0 0 0.2em 0;
+
+      .person {
+        display: inline-flex;
+        width: 2.5em;
+        height: 2.5em;
+        background-color: color-get-alpha(gold, 0.2);
+        border-radius: 1.25em;
+        border: solid 1px color-get-alpha(gold, 0.1);
+        overflow: hidden;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+
+        :first-child {
+          background-color: color-get-alpha(gold, 0.6);
+          width: 1.4em;
+          height: 1.4em;
+          border-radius: 0.7em;
+        }
+
+        :last-child {
+          background-color: color-get-alpha(gold, 0.8);
+          width: 1.8em;
+          height: 1em;
+          border-radius: 0.6em 0.6em 0 0;
+        }
+      }
+
+      .name {
+        margin-left: 0.5em;
+        font-size: 1.5em;
+      }
+    }
+
+    .item {
+      border-bottom: solid 1px color-get-alpha(gold, 0.2);
+      display: block;
+      padding: 1em;
+    }
   }
 
   &.visible .backdrop,
   &.visible .menu {
     left: 0;
+    box-shadow: 3px 0 20px 3px color-get-alpha(black, 0.4);
   }
 }
